--- a/Resources/views/Example/content.html.twig
+++ b/Resources/views/Example/content.html.twig
@@ -1,20 +1,43 @@
-{% extends 'BWSkeletonBundle:Frontend:content.html.twig' %}
+{# Define necessary base template variables #}
+{% set lang = 'en' %}
+{% set body_attr = 'id="body"' %}
+
+{% extends 'BWSkeletonBundle:html5:content.html.twig' %}
+
+{% block title -%}
+    Example Content Title
+{%- endblock %}
+
+{% block meta_description -%}
+    Example Content Meta Description
+{%- endblock %}
 
 {% block css %}
-    <!-- Latest compiled and minified CSS -->
+    <!-- Latest compiled and minified Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <!-- Optional theme -->
+    <!-- Optional Bootstrap theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 {% endblock %}
 
 {% block js %}
-    <!-- Latest compiled and minified JavaScript -->
+    <!-- Latest compiled and minified JavaScript libraries -->
+    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 {% endblock %}
 
+{% block left_sidebar_wrap %}
+    <h3>Example Menu</h3>
+    <ul>
+        <li>
+            <a href="{{ path('bw_skeleton_example_content') }}" title="Extends 'BWSkeletonBundle:html5:content.html.twig'">content.html.twig</a>
+        </li>
+    </ul>
+{% endblock %}
+
 {% block article_wrap %}
-    <h1>Example</h1>
-    <p>
-        Extends <abbr title="{{ _self.templateName }}">"content.html.twig"</abbr> template
-    </p>
+    <h1>Example Page</h1>
+    <p>The <abbr title="{{ _self.templateName }}">"content.html.twig"</abbr> demo template.</p>
+{% endblock %}
+
+{% block body_js %}
 {% endblock %}
