Change BW to LapaLabs

--- a/Resources/views/Example/content.html.twig
+++ b/Resources/views/Example/content.html.twig
@@ -2,7 +2,7 @@
 {% set lang = 'en' %}
 {% set body_attr = 'id="body"' %}
 
-{% extends 'BWSkeletonBundle:html5:content.html.twig' %}
+{% extends 'LapaLabsSkeletonBundle:html5:content.html.twig' %}
 
 {% block title -%}
     Example Content Title
@@ -29,7 +29,7 @@
     <h3>Example Menu</h3>
     <ul>
         <li>
-            <a href="{{ path('bw_skeleton_example_content') }}" title="Extends 'BWSkeletonBundle:html5:content.html.twig'">content.html.twig</a>
+            <a href="{{ path('lapalabs_skeleton_example_content') }}" title="Extends 'LapaLabsSkeletonBundle:html5:content.html.twig'">content.html.twig</a>
         </li>
     </ul>
 {% endblock %}
