--- a/Resources/views/html5/content.html.twig
+++ b/Resources/views/html5/content.html.twig
@@ -1,4 +1,4 @@
-{% extends "BWSkeletonBundle:html5:layout.html.twig" %}
+{% extends "LapaLabsSkeletonBundle:html5:layout.html.twig" %}
 
 {% block content_wrap -%}
     {% block top -%}
