--- a/Resources/views/html5/layout.html.twig
+++ b/Resources/views/html5/layout.html.twig
@@ -1,4 +1,4 @@
-{% extends "BWSkeletonBundle:html5:base.html.twig" %}
+{% extends "LapaLabsSkeletonBundle:html5:base.html.twig" %}
 
 {% block flash_messages -%}
     {% if app.session.flashBag.peekAll %}
