--- a/Resources/views/html5/content.html.twig
+++ b/Resources/views/html5/content.html.twig
@@ -3,7 +3,7 @@
 {% block content_wrap -%}
     {% block top -%}
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-xs-12">
                 <div id="top">
                     {% block top_wrap -%}
                         % Content::Top %
@@ -15,7 +15,7 @@
 
     <div class="row">
         {% block left_sidebar -%}
-            <div class="col-lg-3">
+            <div class="col-xs-3">
                 <div id="left-sidebar">
                     <aside>
                         {% block left_sidebar_wrap -%}
@@ -27,7 +27,7 @@
         {%- endblock %}
 
         {% block article -%}
-            <div class="col-lg-6">
+            <div class="col-xs-6">
                 <div id="article">
                     <article>
                         {% block article_wrap -%}
@@ -39,7 +39,7 @@
         {%- endblock %}
 
         {% block right_sidebar -%}
-            <div class="col-lg-3">
+            <div class="col-xs-3">
                 <div id="right-sidebar">
                     <aside>
                         {% block right_sidebar_wrap -%}
@@ -53,7 +53,7 @@
 
     {% block bottom -%}
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-xs-12">
                 <div id="bottom">
                     {% block bottom_wrap -%}
                         % Content::Bottom %
