--- a/Resources/views/html5/layout.html.twig
+++ b/Resources/views/html5/layout.html.twig
@@ -5,7 +5,7 @@
         <div id="flash-messages">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-xs-12">
                         {% block flash_messages_wrap -%}
                             {% for status, flashMessages in app.session.flashbag.all %}
                                 {% for flashMessage in flashMessages %}
@@ -28,7 +28,7 @@
         <div id="header">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-xs-12">
                         {% block header_wrap -%}
                             % Layout::Header %
                         {%- endblock %}
@@ -43,7 +43,7 @@
     <div id="content">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-xs-12">
                     {% block content_wrap -%}
                         % Layout::Content %
                     {%- endblock %}
@@ -58,7 +58,7 @@
         <div id="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-xs-12">
                         {% block footer_wrap -%}
                             % Layout::Footer %
                         {%- endblock %}
@@ -73,7 +73,7 @@
     <div id="overflow">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-xs-12">
                     {% block overflow_wrap -%}
                         % Layout::Overflow %
                     {%- endblock %}
