--- a/Resources/views/html5/content.html.twig
+++ b/Resources/views/html5/content.html.twig
@@ -6,7 +6,7 @@
             <div class="col-xs-12">
                 <div id="top">
                     {% block top_wrap -%}
-                        % Content::Top %
+                        <!-- % Content::Top % -->
                     {%- endblock %}
                 </div>
             </div>
@@ -19,7 +19,7 @@
                 <div id="left-sidebar">
                     <aside>
                         {% block left_sidebar_wrap -%}
-                            % Content::LeftSidebar %
+                            <!-- % Content::LeftSidebar % -->
                         {%- endblock %}
                     </aside>
                 </div>
@@ -31,7 +31,7 @@
                 <div id="article">
                     <article>
                         {% block article_wrap -%}
-                            % Content::Article %
+                            <!-- % Content::Article % -->
                         {%- endblock %}
                     </article>
                 </div>
@@ -43,7 +43,7 @@
                 <div id="right-sidebar">
                     <aside>
                         {% block right_sidebar_wrap -%}
-                            % Content::RightSidebar %
+                            <!-- % Content::RightSidebar % -->
                         {%- endblock %}
                     </aside>
                 </div>
@@ -56,7 +56,7 @@
             <div class="col-xs-12">
                 <div id="bottom">
                     {% block bottom_wrap -%}
-                        % Content::Bottom %
+                        <!-- % Content::Bottom % -->
                     {%- endblock %}
                 </div>
             </div>
