--- a/Resources/views/html5/layout.html.twig
+++ b/Resources/views/html5/layout.html.twig
@@ -30,7 +30,7 @@
                 <div class="row">
                     <div class="col-xs-12">
                         {% block header_wrap -%}
-                            % Layout::Header %
+                            <!-- % Layout::Header % -->
                         {%- endblock %}
                     </div>
                 </div>
@@ -45,7 +45,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     {% block content_wrap -%}
-                        % Layout::Content %
+                        <!-- % Layout::Content % -->
                     {%- endblock %}
                 </div>
             </div>
@@ -60,7 +60,7 @@
                 <div class="row">
                     <div class="col-xs-12">
                         {% block footer_wrap -%}
-                            % Layout::Footer %
+                            <!-- % Layout::Footer % -->
                         {%- endblock %}
                     </div>
                 </div>
@@ -75,7 +75,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     {% block overflow_wrap -%}
-                        % Layout::Overflow %
+                        <!-- % Layout::Overflow % -->
                     {%- endblock %}
                 </div>
             </div>
